create first version

--- a/ios/scalableReactNativeBoilerplate/Info.plist
+++ b/ios/scalableReactNativeBoilerplate/Info.plist
@@ -48,5 +48,12 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+		<array>
+			<string>Roboto-Bold.ttf</string>
+			<string>Roboto-Regular.ttf</string>
+			<string>MaterialIcons.ttf</string>
+			<string>MaterialCommunityIcons.ttf</string>
+		</array>
 </dict>
 </plist>
