--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint": "^9.10.0",
     "jest": "^29.6.3",
     "metro-react-native-babel-preset": "^0.77.0",
+    "miragejs": "0.1.48",
     "prettier": "^3.3.3",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.3.1",
