--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
         "ios/Pods/Headers/Private/RCT-Folly/folly/lang"
     ],
     "java.configuration.updateBuildConfiguration": "interactive",
-    "i18n-ally.keystyle": "nested"
+    "i18n-ally.keystyle": "nested",
+    "java.compile.nullAnalysis.mode": "automatic"
 }
