--- a/package.json
+++ b/package.json
@@ -22,13 +22,18 @@
     "i18next": "^23.15.1",
     "lodash": "^4.17.21",
     "luxon": "^3.5.0",
+    "openai": "^4.67.1",
     "react": "18.3.1",
     "react-i18next": "^15.0.2",
     "react-native": "0.75.3",
+    "react-native-config": "^1.5.3",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.19.0",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-gifted-chat": "^2.6.4",
     "react-native-localize": "^3.2.1",
     "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "^3.15.4",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-size-matters": "^0.4.2",
