--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "chatGptReactNativeWrapper",
-  "displayName": "chatGptReactNativeWrapper"
+  "name": "mistralAiRNWrapper",
+  "displayName": "mistralAiRNWrapper"
 }
