--- a/ios/mistralAiRNWrapper.xcodeproj/xcshareddata/xcschemes/mistralAiRNWrapper.xcscheme
+++ b/ios/mistralAiRNWrapper.xcodeproj/xcshareddata/xcschemes/mistralAiRNWrapper.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "chatGptReactNativeWrapper.app"
-               BlueprintName = "chatGptReactNativeWrapper"
-               ReferencedContainer = "container:chatGptReactNativeWrapper.xcodeproj">
+               BuildableName = "mistralAiRNWrapper.app"
+               BlueprintName = "mistralAiRNWrapper"
+               ReferencedContainer = "container:mistralAiRNWrapper.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "chatGptReactNativeWrapperTests.xctest"
-               BlueprintName = "chatGptReactNativeWrapperTests"
-               ReferencedContainer = "container:chatGptReactNativeWrapper.xcodeproj">
+               BuildableName = "mistralAiRNWrapperTests.xctest"
+               BlueprintName = "mistralAiRNWrapperTests"
+               ReferencedContainer = "container:mistralAiRNWrapper.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "chatGptReactNativeWrapper.app"
-            BlueprintName = "chatGptReactNativeWrapper"
-            ReferencedContainer = "container:chatGptReactNativeWrapper.xcodeproj">
+            BuildableName = "mistralAiRNWrapper.app"
+            BlueprintName = "mistralAiRNWrapper"
+            ReferencedContainer = "container:mistralAiRNWrapper.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "chatGptReactNativeWrapper.app"
-            BlueprintName = "chatGptReactNativeWrapper"
-            ReferencedContainer = "container:chatGptReactNativeWrapper.xcodeproj">
+            BuildableName = "mistralAiRNWrapper.app"
+            BlueprintName = "mistralAiRNWrapper"
+            ReferencedContainer = "container:mistralAiRNWrapper.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
