--- a/ios/mistralAiRNWrapper/Info.plist
+++ b/ios/mistralAiRNWrapper/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>chatGptReactNativeWrapper</string>
+	<string>mistralAiRNWrapper</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
