--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chatgptreactnativewrapper",
+  "name": "mistralairnwrapper",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -22,7 +22,6 @@
     "i18next": "^23.15.1",
     "lodash": "^4.17.21",
     "luxon": "^3.5.0",
-    "openai": "^4.67.1",
     "react": "18.3.1",
     "react-i18next": "^15.0.2",
     "react-native": "0.75.3",
@@ -42,7 +41,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
-    "ts-jest": "^29.2.5"
+    "ts-jest": "^29.2.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
